--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form-container {
+  background-color: #a7bcff;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.form-wrapper {
+  background-color: white;
+  padding: 20px 60px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+}
+
+.form-wrapper form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.form-wrapper form input {
+  padding: 15px;
+  border: none;
+  border-bottom: 1px solid #a7bcff;
+}
+
+.form-wrapper form button {
+  background-color: #7b96ec;
   color: white;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.form-wrapper p {
+  color: #5a5b8d;
+  font-size: 12px;
+  margin-top: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+::placeholder {
+  color: rgb(175,175,175);
+}
+
+ 
+.form-wrapper .logo {
+  color: #5a5b8d;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.form-wrapper .title {
+  color: #5a5b8d;
+  font-size: 12px;
+}
+
+.form-wrapper form label {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: #8da4f1;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+.form-wrapper form label img {
+  width: 32px;
 }
