--- a/src/App.css
+++ b/src/App.css
@@ -69,3 +69,132 @@
 .form-wrapper form label img {
   width: 32px;
 }
+
+/* home */
+
+.home {
+  background-color: #a7bcff;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.home .container {
+  border: 1px solid white;
+  width: 65%;
+  height: 80%;
+  display: flex;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.home .container .sidebar {
+  flex: 1;
+  border-right: 1px solid #3e3c61;
+  background-color: #3e3c61;
+}
+
+.home .container .sidebar .navbar {
+  display: flex;
+  align-items: center;
+  background-color: #2f2d52;
+  height: 50px;
+  padding: 10px;
+  justify-content: space-between;
+  color: #ddddf7;
+}
+
+.home .container .sidebar .navbar .logo {
+  font-weight: bold;
+}
+
+.home .container .sidebar .navbar .user {
+  display: flex;
+  gap: 10px;
+}
+
+.home .container .sidebar .navbar .user img {
+  background-color: #ddddf7;
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.home .container .sidebar .navbar .user button {
+  background-color: #5d5b8d;
+  color: #ddddf7;
+  font-size: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.home .container .sidebar .search {
+  border-bottom: 1px solid gray;
+}
+
+.home .container .sidebar .search .search-form input{
+  background-color: transparent;
+  border: none;
+  color: white;
+  outline: none;
+  padding: 10px;
+}
+
+.home .container .sidebar .search .search-form input ::placeholder{
+  color: lightgray;
+}
+
+.home .container .sidebar .search .user-chat {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: white;
+  cursor: pointer;
+}
+
+.home .container .sidebar .search .user-chat:hover {
+  background-color: #2f2d52;
+}
+
+.home .container .sidebar .search .user-chat img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.home .container .sidebar .chats .user-chat-info span {
+  font-size: 18px;
+  font-weight: 500;
+}
+.home .container .sidebar .chats .user-chat-info p {
+  font-size: 14px;
+  color: lightgray;
+}
+
+.home .container .sidebar .chats .user-chat {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  color: white;
+  cursor: pointer;
+}
+
+.home .container .sidebar .chats .user-chat:hover {
+  background-color: #2f2d52;
+}
+
+.home .container .sidebar .chats .user-chat img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.home .container .chat {
+  flex: 2;
+}
