--- a/src/App.css
+++ b/src/App.css
@@ -195,6 +195,24 @@
   object-fit: cover;
 }
 
+/* chat */
 .home .container .chat {
   flex: 2;
+}
+.home .container .chat .chat-info {
+  height: 50px;
+  background-color: #5d5b8d;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  color: lightgray;
+}
+.home .container .chat .chat-icons {
+  display: flex;
+  gap: 10px;
+}
+.home .container .chat .chat-icons img{
+  height: 24px;
+  cursor: pointer;
 }
