--- a/src/App.css
+++ b/src/App.css
@@ -222,6 +222,50 @@
   background-color: #ddddf7;
   padding: 10px;
   height: calc(100% - 160px);
+  overflow: scroll;
+}
+.home .container .chat .messages .message {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.home .container .chat .messages .message , .owner {
+  flex-direction: row-reverse;
+}
+.home .container .chat .messages .message.owner .message-content p{
+  background-color: #8da4f1;
+  padding: 10px 20px;
+  border-radius: 10px 0px 10px 10px;
+}
+.home .container .chat .messages .message.owner .message-content {
+  align-items: flex-end;
+}
+.home .container .chat .messages .message .message-info{
+  display: flex;
+  flex-direction: column;
+  color: gray;
+  font-weight: 300;
+}
+.home .container .chat .messages .message .message-info img{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.home .container .chat .messages .message .message-content{
+  max-width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.home .container .chat .messages .message .message-content p{
+  background-color: white;
+  padding: 10px 20px;
+  border-radius: 0px 10px 10px 10px;
+  max-width: max-content;
+}
+.home .container .chat .messages .message .message-content img{
+  width: 50%;
 }
 /* input send messages */
 .home .container .chat .input {
