--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,13 @@
   border: none;
   cursor: pointer;
 }
+.form-wrapper form button:hover {
+  background-color: #2f2d52;
+  color: white;
+  padding: 10px;
+  border: none;
+  cursor: pointer;
+}
 
 .form-wrapper p {
   color: #5a5b8d;
@@ -125,6 +132,13 @@
 
 .home .container .sidebar .navbar .user button {
   background-color: #5d5b8d;
+  color: #ddddf7;
+  font-size: 10px;
+  border: none;
+  cursor: pointer;
+}
+.home .container .sidebar .navbar .user button:hover {
+  background-color: #7b96ec;
   color: #ddddf7;
   font-size: 10px;
   border: none;
@@ -300,6 +314,14 @@
   padding: 10px 15px;
   color: white;
   background-color: #8da4f1;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.home .container .chat .input .send button:hover{
+  border: none;
+  padding: 10px 15px;
+  color: white;
+  background-color: #2f2d52;
   cursor: pointer;
   border-radius: 5px;
 }
