--- a/src/App.css
+++ b/src/App.css
@@ -243,11 +243,11 @@
   gap: 20px;
   margin-bottom: 20px;
 }
-.home .container .chat .messages .message , .owner {
+.home .container .chat .messages .message.owner {
   flex-direction: row-reverse;
 }
 .home .container .chat .messages .message.owner .message-content p{
-  background-color: #8da4f1;
+  background-color: white;
   padding: 10px 20px;
   border-radius: 10px 0px 10px 10px;
 }
@@ -273,7 +273,7 @@
   gap: 10px;
 }
 .home .container .chat .messages .message .message-content p{
-  background-color: white;
+  background-color: #8da4f1;
   padding: 10px 20px;
   border-radius: 0px 10px 10px 10px;
   max-width: max-content;
@@ -281,6 +281,7 @@
 .home .container .chat .messages .message .message-content img{
   width: 50%;
 }  
+
 /* input send messages */
 .home .container .chat .input {
   background-color: white;
@@ -298,7 +299,7 @@
   font-size: 18px;
 }
 .home .container .chat .input input::placeholder {
-  color: lightgray;
+  color:darkgrey;
 }
 .home .container .chat .input .send {
   display: flex;
