--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 .form-container {
   background-color: #a7bcff;
   height: 100vh;
@@ -90,8 +95,8 @@
 
 .home .container {
   border: 1px solid white;
-  width: 65%;
-  height: 80%;
+  width: 100%;
+  height: 100vh;
   display: flex;
   border-radius: 10px;
   overflow: hidden;
