width 100% search input

--- a/src/App.css
+++ b/src/App.css
@@ -160,6 +160,7 @@
   color: white;
   outline: none;
   padding: 10px;
+  width: 100%;
 }
 
 .home .container .sidebar .search .search-form input ::placeholder{
