--- a/src/App.css
+++ b/src/App.css
@@ -252,18 +252,20 @@
   display: flex;
   gap: 20px;
   margin-bottom: 20px;
+  flex-direction: row;
+  align-items: flex-start;
 }
 .home .container .chat .messages .message.owner {
   flex-direction: row-reverse;
+  align-items: flex-start;
 }
 .home .container .chat .messages .message.owner .message-content p{
   background-color: white;
   padding: 10px 20px;
   border-radius: 10px 0px 10px 10px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  max-width: 600px;
+  margin: 0;
+  overflow-wrap: break-word;
+  max-width: 80%;
 }
 .home .container .chat .messages .message.owner .message-content {
   align-items: flex-end;
@@ -276,6 +278,9 @@
   color: gray;
   font-weight: 300;
   align-items: flex-end;
+}
+.home .container .chat .messages .message .message-info span {
+  align-self: flex-end;
 }
 .home .container .chat .messages .message .message-info img{
   width: 40px;
@@ -293,10 +298,9 @@
   background-color: #8da4f1;
   padding: 10px 20px;
   border-radius: 0px 10px 10px 10px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  max-width: 600px;
+  margin: 0;
+  overflow-wrap: break-word;
+  max-width: 80%;
 }
 .home .container .chat .messages .message .message-content img{
   width: 50%;
