--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,8 @@
   font-size: 10px;
   border: none;
   cursor: pointer;
+  padding: 5px;
+  border-radius: 5px;
 }
 .home .container .sidebar .navbar .user button:hover {
   background-color: #7b96ec;
